+ opacity fade on header + fixed height on thumbnail page so it doesn't jump

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   z-index: 2;
   display: block;
   background-image: url("images/header.png");
+
 }
 
 
@@ -754,6 +755,7 @@ footer p {
 .PostThumbnails .Page {
   float: left;
   width: 400px;
+  height: 300px;
   margin-bottom: 0px;
   
 }
